--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="text-container">
-                        <h1 class="h1-large"><br /><br />Bonjour!, it's me Mokshitha..!</h1>
+                        <h1 class="h1-large"><br /><br />Hola!, it's me Mokshitha..!</h1>
                         <p class="p-large">This is my official page.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
