--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">School Education</h4>
-                            <p>I completed my 10th class in sri chaitanya school at west godavari. I scored 9.8 GPA in my 10th class</p>
+                            <p>I completed my 10th class in sri chaitanya school in west godavari. I scored 9.8 GPA in my 10th class</p>
                             
                         </div>
                     </div>
